--- a/bbelection/templates/index.html
+++ b/bbelection/templates/index.html
@@ -8,5 +8,11 @@
     <script type="text/javascript" src="{% static 'js/main.js' %}"> </script>
   </head>
   <body>
+    <ul id="election"> 
+      
+    </ul>
+
+
+
   </body>
 </html>
