--- a/bbelection/templates/index.html
+++ b/bbelection/templates/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <ul id="election"> 
-      
-    </ul>
 
+    </ul>
+    <button id="refresh">Refresh</button>
 
 
   </body>
